--- a/ElkapodHardwareController.ioc
+++ b/ElkapodHardwareController.ioc
@@ -48,16 +48,17 @@ Mcu.CPN=STM32L476RGT6
 Mcu.Family=STM32L4
 Mcu.IP0=CAN1
 Mcu.IP1=DMA
-Mcu.IP10=USB_OTG_FS
+Mcu.IP10=USB_DEVICE
+Mcu.IP11=USB_OTG_FS
 Mcu.IP2=FREERTOS
 Mcu.IP3=I2C1
 Mcu.IP4=NVIC
 Mcu.IP5=QUADSPI
 Mcu.IP6=RCC
 Mcu.IP7=SYS
-Mcu.IP8=USART2
-Mcu.IP9=USB_DEVICE
-Mcu.IPNb=11
+Mcu.IP8=TIM17
+Mcu.IP9=USART2
+Mcu.IPNb=12
 Mcu.Name=STM32L476R(C-E-G)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13
@@ -84,14 +85,15 @@ Mcu.Pin27=PB9
 Mcu.Pin28=VP_FREERTOS_VS_CMSIS_V2
 Mcu.Pin29=VP_SYS_VS_tim1
 Mcu.Pin3=PH0-OSC_IN (PH0)
-Mcu.Pin30=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
+Mcu.Pin30=VP_TIM17_VS_ClockSourceINT
+Mcu.Pin31=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
 Mcu.Pin4=PH1-OSC_OUT (PH1)
 Mcu.Pin5=PA0
 Mcu.Pin6=PA2
 Mcu.Pin7=PA3
 Mcu.Pin8=PA4
 Mcu.Pin9=PA6
-Mcu.PinsNb=31
+Mcu.PinsNb=32
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32L476RGTx
@@ -120,6 +122,7 @@ NVIC.SavedPendsvIrqHandlerGenerated=true
 NVIC.SavedSvcallIrqHandlerGenerated=true
 NVIC.SavedSystickIrqHandlerGenerated=true
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:true\:false
+NVIC.TIM1_TRG_COM_TIM17_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.TIM1_UP_TIM16_IRQn=true\:15\:0\:false\:false\:true\:false\:false\:true\:true
 NVIC.TimeBase=TIM1_UP_TIM16_IRQn
 NVIC.TimeBaseIP=TIM1
@@ -179,7 +182,7 @@ PB9.Signal=CAN1_TX
 PC13.GPIOParameters=GPIO_Label
 PC13.GPIO_Label=USER_PUSHBUTTON
 PC13.Locked=true
-PC13.Signal=GPIO_Input
+PC13.Signal=GPXTI13
 PC14-OSC32_IN\ (PC14).Mode=LSE-External-Oscillator
 PC14-OSC32_IN\ (PC14).Signal=RCC_OSC32_IN
 PC15-OSC32_OUT\ (PC15).Mode=LSE-External-Oscillator
@@ -229,7 +232,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_I2C1_Init-I2C1-false-HAL-true,5-MX_CAN1_Init-CAN1-false-HAL-true,6-MX_QUADSPI_Init-QUADSPI-false-HAL-true,7-MX_USART2_UART_Init-USART2-false-HAL-true,8-MX_IWDG_Init-IWDG-false-HAL-true,9-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_I2C1_Init-I2C1-false-HAL-true,5-MX_CAN1_Init-CAN1-false-HAL-true,6-MX_QUADSPI_Init-QUADSPI-false-HAL-true,7-MX_USART2_UART_Init-USART2-false-HAL-true,8-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false
 RCC.ADCFreq_Value=143750000
 RCC.AHBFreq_Value=75000000
 RCC.APB1Freq_Value=75000000
@@ -287,8 +290,12 @@ RCC.VCOSAI1OutputFreq_Value=287500000
 RCC.VCOSAI2OutputFreq_Value=100000000
 SH.GPXTI12.0=GPIO_EXTI12
 SH.GPXTI12.ConfNb=1
+SH.GPXTI13.0=GPIO_EXTI13
+SH.GPXTI13.ConfNb=1
 SH.GPXTI5.0=GPIO_EXTI5
 SH.GPXTI5.ConfNb=1
+TIM17.IPParameters=Period
+TIM17.Period=7498
 USART2.IPParameters=VirtualMode-Asynchronous
 USART2.VirtualMode-Asynchronous=VM_ASYNC
 USB_DEVICE.CLASS_NAME_FS=CDC
@@ -301,6 +308,8 @@ VP_FREERTOS_VS_CMSIS_V2.Mode=CMSIS_V2
 VP_FREERTOS_VS_CMSIS_V2.Signal=FREERTOS_VS_CMSIS_V2
 VP_SYS_VS_tim1.Mode=TIM1
 VP_SYS_VS_tim1.Signal=SYS_VS_tim1
+VP_TIM17_VS_ClockSourceINT.Mode=Enable_Timer
+VP_TIM17_VS_ClockSourceINT.Signal=TIM17_VS_ClockSourceINT
 VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS.Mode=CDC_FS
 VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS.Signal=USB_DEVICE_VS_USB_DEVICE_CDC_FS
 board=custom
