--- a/ElkapodHardwareController.ioc
+++ b/ElkapodHardwareController.ioc
@@ -32,10 +32,10 @@ Dma.Request1=I2C1_TX
 Dma.RequestsNb=2
 FREERTOS.FootprintOK=true
 FREERTOS.IPParameters=Tasks01,configENABLE_FPU,FootprintOK,configUSE_NEWLIB_REENTRANT,configCHECK_FOR_STACK_OVERFLOW,configTOTAL_HEAP_SIZE
-FREERTOS.Tasks01=defaultTask,24,256,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;IMU,32,512,IMU_TASK_DEFAULT,Default,&handle,Dynamic,NULL,NULL
+FREERTOS.Tasks01=defaultTask,24,256,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;IMU,32,512,imu_task,As external,&handle,Dynamic,NULL,NULL
 FREERTOS.configCHECK_FOR_STACK_OVERFLOW=2
 FREERTOS.configENABLE_FPU=1
-FREERTOS.configTOTAL_HEAP_SIZE=5000
+FREERTOS.configTOTAL_HEAP_SIZE=10000
 FREERTOS.configUSE_NEWLIB_REENTRANT=1
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
@@ -232,7 +232,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_I2C1_Init-I2C1-false-HAL-true,5-MX_CAN1_Init-CAN1-false-HAL-true,6-MX_QUADSPI_Init-QUADSPI-false-HAL-true,7-MX_USART2_UART_Init-USART2-false-HAL-true,8-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_I2C1_Init-I2C1-false-HAL-true,5-MX_CAN1_Init-CAN1-false-HAL-true,6-MX_QUADSPI_Init-QUADSPI-false-HAL-true,7-MX_USART2_UART_Init-USART2-false-HAL-true,8-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false,9-MX_TIM17_Init-TIM17-false-HAL-true
 RCC.ADCFreq_Value=143750000
 RCC.AHBFreq_Value=75000000
 RCC.APB1Freq_Value=75000000
